Laravel v9.12.0 installed

composer require laravel/ui  executed
php artisan ui bootstrap --auth executed
 initail npm install && npm run dev executed
barryvdh/laravel-debugbar installed
login, password, token fields and auth table name loads from env file.
Google reCaptcha installed