@@ -39,6 +39,9 @@ class Kernel extends HttpKernel
         ],
 
         'api' => [
+            /// Force to Json response (Our created Middleware)
+            \App\Http\Middleware\JsonResponseMiddleware::class,
+
             // \Laravel\Sanctum\Http\Middleware\EnsureFrontendRequestsAreStateful::class,
             'throttle:api',
             \Illuminate\Routing\Middleware\SubstituteBindings::class,
