@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1.0",
         "anhskohbo/no-captcha": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
